# ScriptCore

./: .clang-format  CMakeLists.txt  README.md
.devtools/: LicenseHeader.template  appendLicenseHeader.sh  new_backend.sh
.devtools/hooks/: pre-commit
.github/workflows/: coverage.yml  unit_tests.yml
backend/JavaScriptCore/: CMakeLists.txt  JscEngine.cc  JscEngine.h  JscEngine.hpp  JscException.cc  JscHelper.cc  JscHelper.h  JscHelper.hpp  JscLocalReference.cc  JscNative.cc  JscNative.hpp  JscReference.hpp  JscScope.cc  JscScope.h  JscUtils.cc  JscValue.cc  JscWeakRef.cc  JscWeakRef.h  JscWeakRef.mm
backend/JavaScriptCore/trait/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitNative.h  TraitReference.h  TraitScope.h  TraitUtils.h
backend/Lua/: CMakeLists.txt  LuaByteBufferImpl.cc  LuaByteBufferImpl.h  LuaEngine.cc  LuaEngine.h  LuaEngine.hpp  LuaException.cc  LuaHelper.cc  LuaHelper.h  LuaHelper.hpp  LuaLocalReference.cc  LuaNative.cc  LuaNative.hpp  LuaReference.hpp  LuaScope.cc  LuaScope.hpp  LuaUtils.cc  LuaValue.cc
backend/Lua/trait/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitNative.h  TraitReference.h  TraitScope.h  TraitUtils.h
backend/QuickJs/: CMakeLists.txt  QjsEngine.cc  QjsEngine.h  QjsEngine.hpp  QjsException.cc  QjsHelper.cc  QjsHelper.h  QjsHelper.hpp  QjsLocalReference.cc  QjsNative.cc  QjsNative.hpp  QjsReference.hpp  QjsScope.cc  QjsUtils.cc  QjsValue.cc
backend/QuickJs/patch/: 0001-QuickJs-2021-03-27.patch  0001-QuickJs-Patch-2021-03-27.patch
backend/QuickJs/trait/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitNative.h  TraitReference.h  TraitScope.h  TraitUtils.h
backend/SpiderMonkey/: CMakeLists.txt
backend/Template/: CMakeLists.txt  TemplateEngine.cc  TemplateEngine.h  TemplateException.cc  TemplateLocalReference.cc  TemplateNative.cc  TemplateNative.hpp  TemplateReference.hpp  TemplateUtils.cc  TemplateValue.cc
backend/Template/trait/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitNative.h  TraitReference.h  TraitScope.h  TraitUtils.h
backend/V8/: CMakeLists.txt  V8Engine.cc  V8Engine.h  V8Engine.hpp  V8Exception.cc  V8Helper.cc  V8Helper.h  V8Helper.hpp  V8Inspector.cc  V8LocalReference.cc  V8Native.cc  V8Native.hpp  V8Platform.cc  V8Platform.h  V8Reference.hpp  V8Scope.cc  V8Scope.h  V8Scope.hpp  V8Utils.cc  V8Value.cc
backend/V8/trait/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitNative.h  TraitReference.h  TraitScope.h  TraitUtils.h
backend/WebAssembly/: CMakeLists.txt  WasmEngine.cc  WasmEngine.h  WasmEngine.hpp  WasmException.cc  WasmHelper.cc  WasmHelper.h  WasmLocalReference.cc  WasmNative.cc  WasmNative.hpp  WasmReference.hpp  WasmScope.cc  WasmScope.hpp  WasmUtils.cc  WasmValue.cc
backend/WebAssembly/trait/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitNative.h  TraitReference.h  TraitScope.h  TraitUtils.h
docs/doxygen/: CMakeLists.txt  Doxyfile.in
src/: Engine.cc  Engine.h  Engine.hpp  Exception.h  Includes.h  Inspector.h  Native.h  Native.hpp  NativeConverter.hpp  Reference.cc  Reference.h  Scope.cc  Scope.h  Utils.cc  Utils.h  Value.h  foundation.h  types.h  version.h
src/include/ScriptCore/: ScriptCore.h
src/utils/: GlobalWeakBookkeeping.hpp  Helper.cc  Helper.hpp  MemoryPool.hpp  MessageQueue.cc  MessageQueue.h  ThreadLocal.h  ThreadPool.cc  ThreadPool.h  TypeInformation.h
test/: CMakeLists.txt
test/cmake/: TestEnv.cmake
test/cmake/gtest/: CMakeLists.txt
test/cmake/test_libs/: CMakeLists.txt  CMakeLists.txt.in
test/node_addon/: CMakeLists.txt  README.md  hello.js  package.json
test/node_addon/src/: addon.cc
test/src/: BookKeepingTest.cc  ByteBufferTest.cc  CustomConverterTest.cc  Demo.cc  EngineTest.cc  ExceptionTest.cc  InspectorTest.cc  InteroperateTest.cc  ManagedObjectTest.cc  MessageQueueTest.cc  NativeTest.cc  PressureTest.cc  ReferenceTest.cc  ScopeTests.cc  ThreadPoolTest.cc  UtilsTest.cc  ValueTest.cc  gtest_main.cc  test.h
test/src/wasm/: run_test.html
